pom & Log updated